# trader

./: .gitignore  01_get_oanda_data.py  02_process_data.py  03_simulate.py  03_test.py  04_hp_tune.py  05_wavelet_test.py  README_trading_strategies.md  claude_.py  eda.ipynb  forex_strategy_backtest.py  lq.py  pyproject.toml  run_backtest.py  simulate.py  strategy_review.md  test.py  test_esn.py
crypto/: arb_bot.py
crypto/conf/: api.yaml
crypto/src/: api.py
crypto/src/utils/: generic.py
data/raw/EUR_JPY/: EUR_JPY_H1_01012010_31032025.csv  EUR_JPY_H1_01012024_01032025.csv
data/raw/EUR_USD/: EUR_USD_H1_01012010_31032025.csv  EUR_USD_H1_01012024_01032025.csv
data/raw/USD_CAD/: USD_CAD_H1_01012010_31032025.csv  USD_CAD_H1_01012024_01032025.csv
data/raw/USD_JPY/: USD_JPY_H1_01012010_31032025.csv  USD_JPY_H1_01012024_01032025.csv
src/: account.py  configurator.py  entry_strat.py  errors.py  exit_strat.py  oanda_utils.py  position_size.py  preprocessing.py  printer.py  simulator.py  strategy.py  tracker.py  utils.py
src/models/: autoencoder.py
src_backtest/: configurator.py  exit_strat.py  oanda_utils.py  printer.py
src_backtest/account/: account.py
src_backtest/condition/: _condition_base.py  alma_hma.py
src_backtest/indicators/: __init__.py  _base.py  _registry.py  alma.py  hma.py  indicators.py
src_backtest/orders/: order_adjustment.py  order_manager.py  orders.py
src_backtest/risk/: risk_manager.py
src_backtest/simulation/: data_handler.py
src_backtest/strategy/: _base.py  handler.py
src_backtest/utils/: configs.py  decorators.py
(+2 files in other folders)
