[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "gym-anytrading>=2.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.2",
    "oandapyv20>=0.7.2",
    "omegaconf>=2.3.0",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pyesn>=0.0.2",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.2",
    "stable-baselines3>=2.6.0",
    "statsmodels>=0.14.4",
    "torch>=2.5.1",
    "v20>=3.0.25.0",
    "yfinance>=0.2.55",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
